7.3.0 (21-06-2021)
- New Fixture: Shared tuition payment plan between curricular plans, check if payment plan is reachable, tuition conditions, tuition installments custom calculators
- Improvement: Use default payment platform to Automatic rules and Academic services
- Improvement: Add settlement note ERP certification date
- Refactor: Refactor payment penalty from fenixedu-academic-treasury-base to fenixedu-treasury
- Refactor: Use TuitionPaymentPlanOrder to find a tuition payment plan by degree curricular plan
- Refactor: Deprecate PaymentPenaltyEventTarget
- Bug Fix: Include other treasury events than AcademicTreasuryEvent, associated with debt account 
- Bug Fix: Remove and replace condition tuition rule beans

7.2.2 (15-06-2021)
- Bug Fix: Change payment plan order to last plus one

7.2.1 (09-06-2021)
- Bug Fix: Dissociate dcp and other objects when deleting tuition payment plan

7.2.0 (27-05-2021)
- Improvement: Refactorization to use CustomCalculatorsMap on fillProperties

7.1.2 (25-05-2021)
- Bug Fix: Add missing labels in english

7.1.1 (24-05-2021)
- Refactor: Upgrade treasury-base dependency

7.1.0 (20-05-2021)
- Bug Fix: RegistrationRegimeCondition not save regime
- New Fixture: Shared tuition payment plan between curricular plans, check if payment plan is reachable, tuition conditions, tuition installments custom calculators
- Improvement: Use default payment platform to Automatic rules and Academic services
- Improvement: Add settlement note ERP certification date
- Refactor: Replace discontinued PaymentCodePool by DigitalPaymentPlatform

7.0.5 (07-05-2021)
- Bug Fix: Retrieve SIBS entity code from sibs payment request, instead of reading from digital payment platform

7.0.4 (06-05-2021)
- Refactor: Remove not used excludeIfMatches property from AcademicDebtGenerationRuleRestriction
- Improvement: Create all person customers with student customer type and deprecate the candidate type

7.0.3 (04-05-2021)